peac_dev/force-app/main/default/objects/Contract_Account_Role__c/Contract_Account_Role__c.object-meta.xml
<CustomObject>
    <label>Contract Account Role</label>
    <nameField>
        <displayFormat>CAR-{0000}</displayFormat>
        <label>Contract Account Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Account Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>