peac_dev/force-app/main/default/objects/Contract_Account_Role__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Account Roles</relationshipLabel>
    <relationshipName>Contract_Account_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>