peac_dev/force-app/main/default/objects/Contract_Account_Role__c/fields/Dealer_Address__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Address__c</fullName>
    <formula>Account__r.Account_Billing_Street__c + BR() + Account__r.Account_Billing_Street2__c  + BR() +
Account__r.Account_Billing_City__c +&quot;, &quot;+  TEXT(Account__r.Account_Billing_State_Province__c) +&quot; &quot;+ Account__r.Account_Billing_Zip_Postal_Code__c</formula>
    <label>Dealer Address</label>
    <type>Text</type>
</CustomField>