peac_dev/force-app/main/default/objects/Contract_Account_Role__c/fields/Primary_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Dealer</label>
    <type>Checkbox</type>
</CustomField>