peac_dev/force-app/main/default/objects/Contract_Account_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Guarantor</fullName>
            </value>
            <value>
                <fullName>Broker&apos;s Vendor</fullName>
            </value>
            <value>
                <fullName>Franchisor’s Vendor</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Franchisor</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>